# rust_fun

./: .gitignore  README.md
app_creator_librenms/: README.md  main.rs
cmd_exec/: README.md  binary.sh
cmd_exec/backend/: Cargo.toml
cmd_exec/backend/src/: main.rs
cmd_exec/frontend/: index.html  index.js  style.css
copy_ios/: main.rs
dismount_iso_qemu/: .iso_tool_history  Cargo.toml  README.md
dismount_iso_qemu/src/: cli.rs  main.rs  utils.rs  virsh.rs
ipad_copy/: Cargo.toml
ipad_copy/src/: main.rs
ipad_mtp_copy/: Cargo.toml
ipad_mtp_copy/src/: main.rs
ipad_mtp_copy/wpd_enum/: Cargo.toml
ipad_mtp_copy/wpd_enum/src/: lib.rs
rust_email_cleanup/: Cargo.toml  README.md
rust_email_cleanup/src/: main.rs
rust_file_copy/: Cargo.toml
rust_file_copy/src/: main.rs
rust_file_copy/wasm_coding/: test.txt
wasm_code/wasm_site_1/: Cargo.toml  index.html  index.js
wasm_code/wasm_site_1/backend/: Cargo.toml
wasm_code/wasm_site_1/backend/src/: main.rs
wasm_code/wasm_site_1/src/: lib.rs  linux.rs
wasm_code/wasm_site_1/web/: index.js
