[package]
name = "cmd_exec"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] } # Asynchronous runtime
warp = "0.3"                                  # Web framework
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization
serde_json = "1.0"                            # JSON handling
clap = { version = "4.0", features = ["derive"] }